# chatlawer

./: .gitignore  README.md  package-lock.json  package.json  vercel.json
api/: [...route].ts  [...slug].ts  index.ts
api/cases/: index.ts
api/cases/[caseId]/: index.ts
api/lib/: config.ts  http.ts  openai.ts  supabase.ts  systemPrompt.ts
api/lib/services/: caseService.ts  chatService.ts  documentExtraction.ts  documentService.ts  embeddingService.ts  messageService.ts
backend/: env.example  pyproject.toml
backend-ts/: env.example  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend-ts/src/: config.ts  openai.ts  supabase.ts
backend-ts/src/services/: caseService.ts  chatService.ts  documentExtraction.ts  documentService.ts  embeddingService.ts  messageService.ts
backend-ts/src/types/: supabase.ts
backend/app/: __init__.py  config.py  dependencies.py  main.py  models.py  prompts.py
backend/app/prompts/: __init__.py  legal_assistant_prompt.txt
backend/app/routers/: __init__.py  cases.py  chats.py  documents.py  messages.py
backend/app/services/: __init__.py  case_service.py  chat_service.py  document_service.py  embedding_service.py  message_service.py  supabase_service.py
docs/: architecture.md  deployment.md  setup.md
frontend/: env.example  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.tsx
frontend/src/components/: CaseSidebar.tsx  ChatWorkspace.tsx  DocumentPanel.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/services/: api.ts  bootstrap.ts
(+7 files in other folders)
